# docker-cmake-dsc-codewarrior

./: .gitignore  README.md  build.sh  depgraph.sh
app/: CMakeLists.txt  MC56F83000-EVK.mex  MC56F83789_Internal_PFlash_LDM.cmd  MC56F83789_Internal_PFlash_SDM.cmd
app/board/: board.c  board.h  clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
app/src/: main.c  test.c
app/startup/: Flash_config.h
docker/: .gitignore  Dockerfile
docker/data/cmake/: toolchain.cmake
docker/data/scripts/: asm  cc  link
docker/scripts/: xtract.sh  xtract2.sh
scripts/: build.sh
